style(Home): fix cards z-index

--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -8,7 +8,6 @@
   #card-container {
     position: relative;
     margin: 20px auto;
-    z-index: 3;
     &.design-toolbar {
       margin: 35px auto;
     }
